--- a/index.html
+++ b/index.html
@@ -43,4 +43,10 @@
 	
 	<p class="track"><span class="note note5" style="text-indent:-3px">15</span><a href="15.html">高橋 幸宏 – 回想</a>&emsp;<span class="datas">5:18</span>&emsp;<span class="datas">71 words</span></p>
 	
+	<p class="track"><span class="note note6" style="text-indent:-3px">16</span><a href="16.html">戸川純 – 好き好き大好き</a>&emsp;<span class="datas">3:34</span>&emsp;<span class="datas">100 words</span></p>
+	
+	<p class="track"><span class="note note6" style="text-indent:-3px">17</span><a href="17.html">平沢進 – Nurse Cafe - Interactive Live Show 1996</a>&emsp;<span class="datas">3:59</span>&emsp;<span class="datas">86 words</span></p>
+	
+	<p class="track"><span class="note note6" style="text-indent:-3px">18</span><a href="18.html">JA Seazer – 地球刑務所パノプティコン</a>&emsp;<span class="datas">4:34</span>&emsp;<span class="datas">109 words</span></p>
+	
 </div>
