--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 
-<div class="song">
+<div class="song" style="margin-top:80px !important;">
 	<p><span style="color:#d3b690;">˖</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">₊</span><span style="color:#db9c42;">˚</span><span style="color:#d3b690;">✦</span> jmix <span style="color:#d3b690;">✦</span><span style="color:#db9c42;">˚</span><span style="color:#d3c8c3;">₊</span><span style="color:#d3b690;">‧</span><span style="color:#d3c8c3;">⁺</span><span style="color:#d3b690;">˖</span><p>
 		<p><a href="https://open.spotify.com/playlist/34TG5CqJwkBW9aBlsgtwH5?si=62190a8562964b46" target="_blank">Listen here</a>&emsp;↗</p>
 </div>
 
-<div class="song">
+<div class="song" style="margin-bottom:80px !important;">
 	
 	<p class="track"><span class="note note1">1</span><a href="01.html">Anri – 悲しみが止まらない</a>&emsp;<span class="datas">4:24</span>&emsp;<span class="datas">59 words</span></p>
 	
