--- a/hey.html
+++ b/hey.html
@@ -89,7 +89,9 @@ you spend some time together looking out the window. you see a hawk chase after 
 
 the conversation goes elsewhere for a while, you talk about biking, she asks you what is the longest stretch you ever biked in one day. &quot;probably twenty miles?&quot; you say. eventually it gets dark.
 
-[[leave]]</tw-passagedata><tw-passagedata pid="25" name="&quot;what is going on&quot;" tags="" position="650,2200" size="100,100">she looks like a deer caught in headlights but then laughs it off like it was no big deal and takes the pea out of your hand. she eats it normally.</tw-passagedata><tw-passagedata pid="26" name="put the pea in her mouth" tags="" position="775,2200" size="100,100">you place the pea on her stupid tongue and she emanates waves of pervert energy
+[[leave]]</tw-passagedata><tw-passagedata pid="25" name="&quot;what is going on&quot;" tags="" position="650,2200" size="100,100">she looks like a deer caught in headlights but then laughs it off like it was no big deal and takes the pea out of your hand. she eats it normally.
+
+[[see ya-&gt;leave]]</tw-passagedata><tw-passagedata pid="26" name="put the pea in her mouth" tags="" position="775,2200" size="100,100">you place the pea on her stupid tongue and she emanates waves of pervert energy
 
 [[stick your finger in her mouth]]
 
@@ -131,7 +133,7 @@ she backs off for a sec. &quot;this rules,&quot; she says, &quot;do you wanna...
 
 [[&quot;can we actually just talk about feelings&quot;]]
 
-[[leave]]</tw-passagedata><tw-passagedata pid="32" name="time to f*ck" tags="" position="900,2750" size="100,100">OK look (sfd here) it&#39;s all fun and games where feet are involved because I can always be like &quot;ha ha I love feet&quot; and people can send me feet pics and exist in this realm of complete plausible deniability about whether they&#39;re actually flirting with me because it&#39;s like feet CAN be normal but they know that for me feet CAN be sexy so it&#39;s like... ha ha... is this a nude or just a pic of my feet??? tee hee! (mickey for example used to send me feet pics on my birthday lol) anyway I was willing to write a feet scene between us but writing a **** scene is going a little too far when I have NO IDEA IF U ARE INTO ME! LOL! but look... the scenario exists in my head... but I am not going to lay it out for you...... idk unless you bully me really hard then I&#39;ll tell you I guess
+[[leave]]</tw-passagedata><tw-passagedata pid="32" name="time to f*ck" tags="" position="900,2750" size="100,100">OK look (sfd here) it&#39;s all fun and games where feet are involved because I can always be like &quot;ha ha I love feet&quot; and people can send me feet pics and exist in this realm of complete plausible deniability about whether they&#39;re actually flirting with me because it&#39;s like feet CAN be normal but they know that for me feet CAN be sexy so it&#39;s like... ha ha... is this a nude or just a pic of my feet??? tee hee! (mickey for example used to send me feet pics on my birthday lol) anyway I was willing to write a feet scene between us but writing a f*ck scene is going a little too far when I have NO IDEA IF U ARE INTO ME! LOL! but look... the scenario exists in my head... but I am not going to lay it out for you...... idk unless you bully me really hard then I&#39;ll tell you I guess
 
 [[ok-&gt;leave]]</tw-passagedata><tw-passagedata pid="33" name="kiss more" tags="" position="1025,2750" size="100,100">you have a nice time kissing, you sit down and alternate some gentle smooches all over each others&#39; faces and some slow deep altered state making out
 
