--- a/sample twine game.html
+++ b/sample twine game.html
@@ -509,7 +509,7 @@ Feebly you invoke some saints. You manage to name a couple before your intestine
 
 }(click-rerun:?continue)[(append:?next)[
 
-(print:$dialogue&#39;s $step)(set: $step to it + 1)(if:$step is $dialogue&#39;s length)[(replace:?continue)[]]]]
+(print:$dialogue&#39;s $step)(set: $step to it + 1)(if:$step &gt; $dialogue&#39;s length)[(replace:?continue)[]]]]
 
 &lt;==
 
