--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play mickey z.</tw-noscript></noscript></tw-story>
-<tw-storydata name="mickey z" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="60F36D1C-C7F5-4435-8A26-EFC1BE8DE366" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Press+Start+2P&family=DotGothic16&family=Lora&family=Overpass+Mono&family=Roboto+Slab:wght@300&display=swap');
+<tw-storydata name="mickey z" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="60F36D1C-C7F5-4435-8A26-EFC1BE8DE366" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=DotGothic16&family=Lora&family=Overpass+Mono&family=Press+Start+2P&family=Roboto+Slab:wght@300&display=swap');
 
 tw-story[tags~="start"] {
  font-family: 'Lora', serif; 
@@ -72,16 +72,15 @@ tw-story[tags~="bgpink"] {
 }
 
 tw-story[tags~="fran"] h3{
-  font-family: 'Press Start 2P', monospace; 
+  font-family: 'Press Start 2P', monospace;
+  padding:0;
+  margin:0;
 }
-
 
 tw-story[tags~="zoe"] {
  font-family: 'Overpass Mono', sans-serif; 
   background-color:#9dacc1;
   color:#322a51;
-  padding:0;
-  margin:0;
 }
 
 tw-story[tags~="zoe"] tw-link{
