--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play mickey z.</tw-noscript></noscript></tw-story>
-<tw-storydata name="mickey z" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="60F36D1C-C7F5-4435-8A26-EFC1BE8DE366" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=DotGothic16&family=Lora&family=Overpass+Mono&family=Press+Start+2P&family=Roboto+Slab:wght@300&display=swap');
+<tw-storydata name="mickey z" startnode="1" creator="Twine" creator-version="2.7.1" format="Harlowe" format-version="3.3.7" ifid="60F36D1C-C7F5-4435-8A26-EFC1BE8DE366" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=DotGothic16&family=Lora&family=Overpass+Mono&family=Press+Start+2P&family=Roboto+Slab:wght@300&display=swap');
 
 tw-story[tags~="start"] {
  font-family: 'Lora', serif; 
@@ -143,9 +143,30 @@ tw-story[tags~="gal2"] tw-link.visited:hover{
   color:#827c16;
 }
 
+tw-story[tags~="gal2"] {
+  font-family: 'Crimson Text', serif; 
+  background-color:#4d4d4b;
+  color:#e9e3e3;
+}
+
+tw-story[tags~="james"] {
+ font-family: 'Playfair Display', serif; 
+  background-color:#030036;
+  color:#7e98ca;
+}
+
+tw-story[tags~="james"] tw-link, tw-story[tags~="james"] .enchantment-link{
+  font-size:200%;
+  color:#633ca6;
+}
+
+tw-story[tags~="james"] tw-link:hover,tw-story[tags~="james"] .enchantment-link:hover{
+  color:#e05600;
+}
+
 tw-story tw-sidebar {
     display: none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="fran" color="purple"></tw-tag><tw-tag name="zoe" color="blue"></tw-tag><tw-tag name="gal1" color="green"></tw-tag><tw-tag name="gal2" color="red"></tw-tag><tw-tag name="bgpink" color="red"></tw-tag><tw-passagedata pid="1" name="start" tags="start" position="975,350" size="100,100">you are mickey z.
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="fran" color="purple"></tw-tag><tw-tag name="zoe" color="blue"></tw-tag><tw-tag name="gal1" color="green"></tw-tag><tw-tag name="gal2" color="red"></tw-tag><tw-tag name="bgpink" color="red"></tw-tag><tw-tag name="james" color="yellow"></tw-tag><tw-passagedata pid="1" name="start" tags="start" position="975,350" size="100,100">you are mickey z.
 
 you&#39;re sitting in your room.
 
@@ -155,7 +176,9 @@ what will u do?
 
 [[You decide to boot up Armored Core VI: Fires of Rubicon-&gt;zoe]]
 
-[[Open your window-&gt;gal]]</tw-passagedata><tw-passagedata pid="2" name="fran" tags="fran" position="950,600" size="100,100">How many squats do you do?
+[[Open your window-&gt;gal]]
+
+[[get in the f-word robot-&gt;james]]</tw-passagedata><tw-passagedata pid="2" name="fran" tags="fran" position="950,600" size="100,100">How many squats do you do?
 
 (link-replace:&quot;No squats&quot;)[Mickey goes to write in her journal but all she can write is the word squats
 
@@ -375,7 +398,23 @@ And…&#39;&#39;Lyle&#39;&#39;?? Is riding on her back!
 Chaos Witch Quelaag looks down at you and bellows sexily &#39;&#39;“Well well well…look who finally made it to the vow renewal ceremony. It’s as if you almost forgot that you were married to the both of us, Mickey.”&#39;&#39;
 
 (if: $roses is true)[(link-goto:&quot;You offer Quelaag and Lyle the roses you brought.&quot;)]
-(else:)[(link-goto:&quot;Quelaag notices the silver sword in your hand.&quot;)]</tw-passagedata></tw-storydata>
+(else:)[(link-goto:&quot;Quelaag notices the silver sword in your hand.&quot;)]</tw-passagedata><tw-passagedata pid="25" name="james" tags="james" position="975,200" size="100,100">&lt;img src=&quot;james/Mickey EVA jameskuo treefix.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+[[→-&gt;james2]]</tw-passagedata><tw-passagedata pid="26" name="james2" tags="james" position="975,75" size="100,100">Vision After the Sermon (Mickey Wrestling with the Angels)
+
+&lt;img src=&quot;james/Mickey Angel 01.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+(link:&quot;→&quot;)[&lt;img src=&quot;james/Mickey Angel 02.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+(link:&quot;→&quot;)[&lt;img src=&quot;james/Mickey Angel 03.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+(link:&quot;→&quot;)[&lt;img src=&quot;james/Mickey Angel 04.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+(link:&quot;→&quot;)[&lt;img src=&quot;james/Mickey Angel 05.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+[[→-&gt;james3]]]]]]</tw-passagedata><tw-passagedata pid="27" name="james3" tags="james" position="800,175" size="100,100">&lt;img src=&quot;james/Mickey 4-5 Impact Giveaway.jpg&quot; style=&quot;width:100%;&quot;&gt;
+==&gt;
+[[you can (not) advance (no, really) →-&gt;start]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
