gatorade colors etc

--- a/mickey game/mickey z.html
+++ b/mickey game/mickey z.html
@@ -537,9 +537,11 @@ Vision After the Sermon (Mickey Wrestling with the Angels)
 quelaag-sword: ./gal/quelaag-sword.wav</tw-passagedata><tw-passagedata pid="29" name="hal.config" tags="" position="250,75" size="100,100">showControls: false</tw-passagedata><tw-passagedata pid="30" name="kris" tags="kris" position="1700,750" size="100,100">You are waiting in queue to load into a game of DayZ. One of your wonderful, beauticious chatters suggests playing a rousing game of marbles to pass the time. 
 
 [[Start up an exhilarating game of marbles]]
+
 [[Reject the tyranny of marbles and instead pay the enlightened game of Vampire Survivors]]</tw-passagedata><tw-passagedata pid="31" name="Start up an exhilarating game of marbles" tags="kris" position="1850,675" size="100,100">You load up the marble’s website. The bright colors and garish graphic design sear your eyeballs. You choose a map at random and the game loads up a marble track placed high in the sky above an endless field of corn. The bright green corn leaves swaying gently in the digital breeze. Flashes of bright yellow corn kernels peek out between stalks. Nothing can hurt you in the corn, nothing at all. 
 
 [[!play joining the game of marbles yourself]]
+
 [[Stay on the sidelines and spectate the race. After all, this is a chatter’s game]]</tw-passagedata><tw-passagedata pid="32" name="Reject the tyranny of marbles and instead pay the enlightened game of Vampire Survivors" tags="kris" position="1850,800" size="100,100">You play a delightful game of Vampire Survivors and later have a splendid time playing DayZ and chatting to your friends who love you.
  
  [[the end-&gt;start]]</tw-passagedata><tw-passagedata pid="33" name="!play joining the game of marbles yourself" tags="kris" position="2000,700" size="100,100">The game starts up and all the marbles assemble. The gang’s all here: `pichu_slapping_butt`, hellophia, `gravy_ETs`, librarylion, galuigi, walfhord, JamesKuoDraws, Yoskidroski, JohnsonRCool, boobypuppy, et cetera. A marble appears labeled SpiderBabby, that’s you! :) The marbles are arranged around a large, circular saucer with a hole in the middle. The hole leads to the rest of the marble track. 
@@ -551,6 +553,7 @@ The timer counts down and the race begins, all the marbles roll towards the hole
 `yikes_lee`: lemme in the fricckin hole]&lt;chat|
 
 [[Go in the hole]]
+
 [[Stay on the perimeter of the ring away from the hole]]</tw-passagedata><tw-passagedata pid="34" name="Stay on the sidelines and spectate the race. After all, this is a chatter’s game" tags="kris" position="1975,850" size="100,100">You watch your chatters race down the marble track. Several chatters fly off the track and die, but a few make it through to the end. `pichu_slapping_butt`  is the winner, congrats PSB! You log into DayZ and have a wonderful time playing and chatting with your friends who love you very, very much.
 
 [[the end-&gt;start]]</tw-passagedata><tw-passagedata pid="35" name="Go in the hole" tags="kris" position="2175,725" size="100,100">Your little round, digital marble glides towards the hole and drops into it. When the marble disappears into the hole, you feel a weird pull in the middle of your stomach. You lurch forward.
@@ -565,11 +568,13 @@ wonderswaan: best day of my LIFE!!!]&lt;chat|
 Your friends are on all sides of you, having a blast. It’s exhilarating, it feels like you’re on a rollercoaster- the smoothest, fastest roller coaster that’s suspended thousands of feet in the air. From up here, the corn looks like little miniature lollipops. 
 
 [[Look closer at the corn]]
+
 [[Definitely don’t look too close at the corn]]</tw-passagedata><tw-passagedata pid="38" name="Look closer at the corn" tags="kris" position="2275,875" size="100,100">As you zoom down the marble tube you glance down at the corn. It’s looking a little dry down there, the stalks have become brown and brittle. And instead of gleaming yellow kernels of corn peeking out of the ears, there’s something else. Instead of kernels of corn, little gleaming multi-color balls of glass glitter in the sunlight. The corn is made up of a bunch of marbles! Suddenly one of the ears of corn snaps off of the dried cornstalk and spills on the ground. Marbles go scattering everywhere and you realize that the ground itself is made up not of dirt, but piles and piles of marbles. 
 
 [[Well that’s weird, but it’s not gonna ruin my day.-&gt;keep rolling]]</tw-passagedata><tw-passagedata pid="39" name="Definitely don’t look too close at the corn" tags="kris" position="2400,850" size="100,100">You avert your eyes and [[keep rolling]]…</tw-passagedata><tw-passagedata pid="40" name="keep rolling" tags="kris" position="2375,1025" size="100,100">BOOF! Suddenly you find yourself jammed in a pile of marbles yourself. There’s a fork in the road and all the marbles have piled up around the two diverging tracks. 
 
 [[Go right]]
+
 [[Go left]]</tw-passagedata><tw-passagedata pid="41" name="Go right" tags="kris" position="2400,1150" size="100,100">You roll onto the right side of the divide and find your marble body shooting up into the air next to `pichu_slapping_butt`.
 
 [`pichu_slapping_butt`: sup lit mickey! Happy birthday!]&lt;chat|
@@ -581,9 +586,11 @@ Before you can reply, PSB goes off the track a little bit too far and you see th
 PSB hits the ground and dies. 
 
 [[RIP PSB. That’s marbles!]]
-[[Wait, for real? DIES? Dead-dead???!-&gt;RIP PSB. That’s marbles!]]</tw-passagedata><tw-passagedata pid="42" name="Go left" tags="kris" position="2525,1050" size="100,100">CHEH. Trying to exercise free will again I see, but you’re a marble and the marble goes where gravity and inertia want it to go, which is to the [[right track-&gt;Go right]].</tw-passagedata><tw-passagedata pid="43" name="RIP PSB. That’s marbles!" tags="kris" position="2550,1200" size="100,100">From the pile of marbles rises a tombstone. On it is written “Here Lies `pichu_slapping_butt`, Slapped Butts their whole life. May they slap more butt in the continuing afterlife. Their slaps will be missed.“
+
+[[Wait, for real? DIES? Dead-dead???!-&gt;RIP PSB. That’s marbles!]]</tw-passagedata><tw-passagedata pid="42" name="Go left" tags="kris" position="2525,1050" size="100,100">CHEH. Trying to exercise free will again I see, but you’re a marble and the marble goes where gravity and inertia want it to go, which is to the [[right track-&gt;Go right]].</tw-passagedata><tw-passagedata pid="43" name="RIP PSB. That’s marbles!" tags="kris" position="2550,1175" size="100,100">From the pile of marbles rises a tombstone. On it is written “Here Lies `pichu_slapping_butt`, Slapped Butts their whole life. May they slap more butt in the continuing afterlife. Their slaps will be missed.“
 
 [[Oh my god PSB is dead!!!!!!]]
+
 [[There’s no way that’s real, I mean this whole thing feels real but PSB is still alive out there somewhere, right???? RIGHT???-&gt;wrong]]</tw-passagedata><tw-passagedata pid="44" name="Oh my god PSB is dead!!!!!!" tags="kris" position="2475,1325" size="100,100">From behind you comes a rumbling sound. You look behind you and following you down the track is a huge, blood-red marble with a skull embedded inside of it. That’s right, this marble is so big that it can encapsulate an entire human skull. You are so, SO little next to this thing, and it’s coming right for you! 
 
 The evil-looking marble rolls down the track, knocking other chatters off of the course. They fly through the air and fall to their doom in the cornfield/marble graveyard below. The remaining dry corn stalks erupt into flame, and ignites an endless field of fire. 
@@ -598,6 +605,7 @@ elkvelvet: i didnt even want to play marbles……..]&lt;chat|
 You take a big breath and shout: “NOOOOOOO! Not my chatters!!!!!!!!!!!!!!!” You scream into the marble void as you spin down a twisting curly-q slide. The giant, Mean Marble taunts you. “You did this Mickey, you pitted your chatters against each other in the realm of marbles and now you will suffer the marble consequences!!!” The Mean Marble bumps you, and you can feel your little marble body careening wildly and threatening to fall off the track. 
 
 [[Bump the Mean Marble back and force it off the track]]
+
 [[Slow down and focus your energy on keeping yourself on the track-&gt;Bump the Mean Marble back and force it off the track]]</tw-passagedata><tw-passagedata pid="45" name="wrong" tags="kris" position="2600,1325" size="100,100">WRONG!!!!!!!!! [[PSB IS DEAD!!!!!!-&gt;Oh my god PSB is dead!!!!!!]]</tw-passagedata><tw-passagedata pid="46" name="Bump the Mean Marble back and force it off the track" tags="kris" position="2400,1450" size="100,100">CHEH. you think you can fight back against this marble? You’re just a little marble! Tiny!!! All your efforts come to naught, you only end up pissing off the Mean Marble. 
 
 [`Mean_Marble`: HNNNGGHHH!!!! I’M ANGRY!!!!!]&lt;chat|
@@ -625,6 +633,7 @@ mysweettreasure: We’re still marbles and still dead but this is better than be
 You laugh aloud: “AHAHAHAHAHA!! SUCK IT!!!!” Sheer euphoria charges through your veins. As you revel in your victory, one of your marble chatters (probably Gal) lands straight on your head and knocks you out.
 
 [[Wake up]]
+
 [[Take a little nap (pee break)-&gt;Wake up]]</tw-passagedata><tw-passagedata pid="48" name="Wake up" tags="kris" position="2250,1200" size="100,100">When you wake up you are surrounded by your closest chatter, that is, the chatter that lives close to you. “James??? Jame Kuo???? Wh-what happened??” James: “You passed out on stream! It was scary!” 
 
 James has called the doctor and she hands you a prescription sheet “You were like, really dehydrated. You should really drink more water.” She says it in kind of a judgmental way that sort of pisses you off even though she literally just saved your life. The prescription sheet just says “drink more water” on it.  
@@ -792,28 +801,28 @@ You don’t have to piss, do you?
 [[quench thy thirst]]
 
 [[shut’eth thy fridge]]</tw-passagedata><tw-passagedata pid="100" name="quench thy thirst" tags="kevin" position="550,1300" size="100,100">(either:
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #6dcaf7)[Arctic Blitz!] You’re so grateful for this blessed blue elixir. Your HP is restored to full! Your skin is clear and your hair is radiant.
+&quot;(enchant: ?page, (background: #6dcaf7))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #6dcaf7)[Arctic Blitz!] You’re so grateful for this blessed blue elixir. Your HP is restored to full! Your skin is clear and your hair is radiant.
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #cc3867)[G2 Fruit Punch!] As dependable as always, less calories and more importantly less sodium, maybe? I am not going to check! 
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #cc3867))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #cc3867)[G2 Fruit Punch!] As dependable as always, less calories and more importantly less sodium, maybe? I am not going to check! 
 Says here you’ve gained a temporary boost to your Speed! Neat!
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #d7e856)[Lemon Lime.] Yep, just regular ‘ol Lemon Lime, like the first flavor they ever made probably. You take a swig and stare out the window for a few minutes. You look down at the bottle in your hand. Time has passed.
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #d7e856))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #d7e856)[Lemon Lime.] Yep, just regular ‘ol Lemon Lime, like the first flavor they ever made probably. You take a swig and stare out the window for a few minutes. You look down at the bottle in your hand. Time has passed.
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #ee8534)[Mango Xtremo!] This is one of the rarest flavors of Gatorade according to the Gatorade wiki. You’re probably one of the few to have actually tasted this orange concoction. It’s mind-wrending flavor not only powers up your physical AND mental stats, but also… hmm is that tajín? spicy sweet!
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #ee8534))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #ee8534)[Mango Xtremo!] This is one of the rarest flavors of Gatorade according to the Gatorade wiki. You’re probably one of the few to have actually tasted this orange concoction. It’s mind-wrending flavor not only powers up your physical AND mental stats, but also… hmm is that tajín? spicy sweet!
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #ec7e74)[Strawberry Lemonade.] Described by experts as “One of the uncommon flavors of Gatorade. At whatever picture you&#39;re looking at, the flavor can come in 2 distinct shades of red. It has no additional variants, and it shouldn&#39;t be confused with ‘G2: Raspberry Lemonade’.”
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #ec7e74))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #ec7e74)[Strawberry Lemonade.] Described by experts as “One of the uncommon flavors of Gatorade. At whatever picture you&#39;re looking at, the flavor can come in 2 distinct shades of red. It has no additional variants, and it shouldn&#39;t be confused with ‘G2: Raspberry Lemonade’.”
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #cd81f7)[Summit Storm!] alluring purple hue, electrifying purple flavor. You feel your brain coursing with purple energy. +10 to your Magic Power and -10 to your thirst.
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #cd81f7))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #cd81f7)[Summit Storm!] alluring purple hue, electrifying purple flavor. You feel your brain coursing with purple energy. +10 to your Magic Power and -10 to your thirst.
 
-[[Thanks Gatorade.-&gt;start]]&quot;,
-&quot;Yum! (font:&#39;Comic Sans MS&#39;)+(color: #b3b3b3)[Frost Glacier Cherry Zero!] A chill runs down your spine like ice through your veins like fire in your eyes. Light shoots from your finger tips and toes, a crystal prism forms around you. You are transported to a dimension entirely made of electrolytes. Here there is no such thing as dehydration. You are at peace. GG.
+[[Thanks Gatorade.-&gt;start]]]&quot;,
+&quot;(enchant: ?page, (background: #b3b3b3))(bg:#f4f1ee)[Yum! (font:&#39;Comic Sans MS&#39;)+(color: #b3b3b3)[Frost Glacier Cherry Zero!] A chill runs down your spine like ice through your veins like fire in your eyes. Light shoots from your finger tips and toes, a crystal prism forms around you. You are transported to a dimension entirely made of electrolytes. Here there is no such thing as dehydration. You are at peace. GG.
 
-[[Thanks Gatorade.-&gt;start]]&quot;)</tw-passagedata><tw-passagedata pid="101" name="shut’eth thy fridge" tags="kevin" position="675,1300" size="100,100">You are suddenly overcome with the urge to not hydrate. You close the fridge and log on to the internet. Oh my god, its all here, all of the world’s information at your fingertips. You click play on an MP3 “Know Your Chicken” off Cibo Matto’s 1996 album VIVA! LA WOMAN, crack your knuckles and start surfing the ’net.
+[[Thanks Gatorade.-&gt;start]]]&quot;)</tw-passagedata><tw-passagedata pid="101" name="shut’eth thy fridge" tags="kevin" position="675,1300" size="100,100">You are suddenly overcome with the urge to not hydrate. You close the fridge and log on to the internet. Oh my god, its all here, all of the world’s information at your fingertips. You click play on an MP3 “Know Your Chicken” off Cibo Matto’s 1996 album VIVA! LA WOMAN, crack your knuckles and start surfing the ’net.
 
 Unfortunately you get absorbed in the scroll, and because you didn’t tend to your thirst before you sat down your eyes start to bake from the blue light of the screen. your fingers crack and sting with every keystroke, your hair becomes crispy as it protrudes out of your black hoodie. Your bones grow weak, but you’re too busy racking up VRs in Apex to notice. Your posture begins to slip... Your vision grows blurry as your hand drifts off of the mouse to rest limply at your side.
 
